--- a/Spring_Server/pom.xml
+++ b/Spring_Server/pom.xml
@@ -69,6 +69,12 @@
             <artifactId>mapstruct-processor</artifactId>
             <version>1.5.5.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <version>3.2.3</version>
+        </dependency>
+
 
     </dependencies>
 
