--- a/Spring_Server/src/main/resources/application.properties
+++ b/Spring_Server/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/drvolte
 spring.datasource.username=root
 spring.datasource.password=otageri
 spring.jpa.hibernate.ddl-auto=update
-server.address=192.168.0.113
+#server.address=192.168.0.111
