both http and http enabled
sucees
8080 for http
8443 for https

--- a/Spring_Server/src/main/resources/application.properties
+++ b/Spring_Server/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.datasource.username=root
 spring.datasource.password=otageri
 spring.jpa.hibernate.ddl-auto=update
 #server.address=192.168.0.111
+#HTTP port
+http.port=8080
+server.port=8443
+server.ssl.key-store=keystore.p12
+server.ssl.key-store-password=784512963
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=tomcat
