--- a/Spring_Server/pom.xml
+++ b/Spring_Server/pom.xml
@@ -74,7 +74,11 @@
             <artifactId>spring-boot-devtools</artifactId>
             <version>3.2.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240205</version>
+        </dependency>
 
     </dependencies>
 
