--- a/React-Server/package.json
+++ b/React-Server/package.json
@@ -13,6 +13,7 @@
     "@toast-ui/react-calendar": "^2.1.3",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.0",
