some logging stuff

--- a/Spring_Server/src/main/resources/application.properties
+++ b/Spring_Server/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=otageri
 spring.jpa.hibernate.ddl-auto=update
 #server.address=192.168.0.111
+server.address=localhost
 #HTTP port
 http.port=8080
 server.port=8443
@@ -10,3 +11,4 @@ server.ssl.key-store=keystore.p12
 server.ssl.key-store-password=784512963
 server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
+#logging.level.root=DEBUG
