--- a/Spring_Server/src/main/resources/application.properties
+++ b/Spring_Server/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.jpa.hibernate.ddl-auto=update
 #server.address=192.168.0.111
 server.address=localhost
 #HTTP port
-http.port=8080
-server.port=8443
+http.port=80
+server.port=443
 server.ssl.key-store=keystore.p12
 server.ssl.key-store-password=784512963
 server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
-#logging.level.root=DEBUG
+logging.level.root=DEBUG
