--- a/Spring_Server/src/main/resources/application.properties
+++ b/Spring_Server/src/main/resources/application.properties
@@ -2,7 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/drvolte
 spring.datasource.username=root
 spring.datasource.password=otageri
 spring.jpa.hibernate.ddl-auto=update
-
 # server.address=192.168.0.111
 #HTTP port
 http.port=80
@@ -11,4 +10,4 @@ server.ssl.key-store=keystore.p12
 server.ssl.key-store-password=784512963
 server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
-logging.level.root=DEBUG
+# logging.level.root=DEBUG
