--- a/Spring_Server/src/main/resources/application.properties
+++ b/Spring_Server/src/main/resources/application.properties
@@ -11,3 +11,4 @@ server.ssl.key-store-password=784512963
 server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
 # logging.level.root=DEBUG
+spring.data.rest.base-path=springdatarest
