--- a/Spring_Server/src/main/resources/application.properties
+++ b/Spring_Server/src/main/resources/application.properties
@@ -10,5 +10,5 @@ server.ssl.key-store=keystore.p12
 server.ssl.key-store-password=784512963
 server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
-# logging.level.root=DEBUG
+logging.level.root=warn
 spring.data.rest.base-path=springdatarest
