--- a/React-Server/package.json
+++ b/React-Server/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@fullcalendar/core": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
     "@fullcalendar/interaction": "^6.1.11",
@@ -16,12 +19,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@toast-ui/react-calendar": "^2.1.3",
+    "@types/styled-components": "^5.1.34",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "devextreme": "^23.2.4",
     "devextreme-react": "23.2.4",
+    "framer-motion": "^11.0.24",
+    "js-dynamic-island": "^2.1.6",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.0",
@@ -30,6 +36,7 @@
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-live-island": "^0.10.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-search-box": "^3.0.0",
