--- a/React-Server/package.json
+++ b/React-Server/package.json
@@ -41,6 +41,7 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-search-box": "^3.0.0",
+    "react-select": "^5.8.0",
     "react-swipe-to-reveal-actions": "^1.1.1",
     "react-toastify": "^10.0.4",
     "styled-components": "^6.1.8",
