--- a/Spring_Server/src/main/resources/application.properties
+++ b/Spring_Server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/drvolte
 spring.datasource.username=root
-spring.datasource.password=otageri
+spring.datasource.password=Chethan@95
 spring.jpa.hibernate.ddl-auto=update
 # server.address=192.168.0.111
 #HTTP port
@@ -12,3 +12,11 @@ server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
 #logging.level.root=warn
 spring.data.rest.base-path=springdatarest
+
+# Adding application properties for Java Mail Sender
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hemantkumarcpersonal@gmail.com
+spring.mail.password=qiylmvimrqwpgnov
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
