--- a/Spring_Server/src/main/resources/application.properties
+++ b/Spring_Server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/drvolte
 spring.datasource.username=root
-spring.datasource.password=otageri
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 # server.address=192.168.0.111
 #HTTP port
