--- a/Spring_Server/src/main/resources/application.properties
+++ b/Spring_Server/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/drvolte
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=otageri
 spring.jpa.hibernate.ddl-auto=update
 # server.address=192.168.0.111
-
 #HTTP port
 http.port=80
 server.port=443
@@ -13,7 +12,6 @@ server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
 #logging.level.root=warn
 spring.data.rest.base-path=springdatarest
-
 # Application properties for Java Mail Sender
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -21,7 +19,6 @@ spring.mail.username=hemantkumarcpersonal@gmail.com
 spring.mail.password=qiylmvimrqwpgnov
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
 # Application properties for Uploading / Downloading files
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
