--- a/React-Server/package.json
+++ b/React-Server/package.json
@@ -16,10 +16,9 @@
     "@headlessui/react": "^1.7.19",
     "@headlessui/tailwindcss": "^0.2.0",
     "@iconify/react": "^4.1.1",
+    "@lordicon/react": "^1.6.0",
     "@mui/icons-material": "^5.15.15",
     "@mui/lab": "^5.0.0-alpha.147",
-    "@mui/material": "^5.15.15",
-    "@lordicon/react": "^1.6.0",
     "@mui/material": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.3.0",
@@ -42,6 +41,7 @@
     "devextreme-react": "23.2.4",
     "framer-motion": "^11.0.24",
     "history": "^5.3.0",
+    "https-localhost": "^4.7.1",
     "js-dynamic-island": "^2.1.6",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
@@ -77,7 +77,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
