--- a/React-Server/package.json
+++ b/React-Server/package.json
@@ -31,6 +31,7 @@
     "@tremor/react": "^3.16.0",
     "@types/styled-components": "^5.1.34",
     "apexcharts": "^3.43.0",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "chroma-js": "^2.4.2",
@@ -39,7 +40,7 @@
     "dayjs": "^1.11.10",
     "devextreme": "^23.2.4",
     "devextreme-react": "23.2.4",
-    "framer-motion": "^11.0.24",
+    "framer-motion": "^11.1.9",
     "history": "^5.3.0",
     "https-localhost": "^4.7.1",
     "js-dynamic-island": "^2.1.6",
@@ -49,6 +50,7 @@
     "lottie-web": "^5.12.2",
     "moment": "^2.30.1",
     "numeral": "^2.0.6",
+    "postcss-cli": "^11.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -60,14 +62,14 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.2.1",
     "react-live-island": "^0.10.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-search-box": "^3.0.0",
     "react-select": "^5.8.0",
     "react-swipe-to-reveal-actions": "^1.1.1",
-    "react-toastify": "^10.0.4",
+    "react-toastify": "^10.0.5",
     "rsuite": "^5.59.2",
     "simplebar-react": "^3.2.4",
     "styled-components": "^6.1.8",
@@ -77,7 +79,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "set HTTPS=true&&react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
