--- a/React-Server/package.json
+++ b/React-Server/package.json
@@ -1,109 +1,109 @@
 {
-  "name": "dr.volte",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@faker-js/faker": "^8.1.0",
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@fullcalendar/core": "^6.1.11",
-    "@fullcalendar/daygrid": "^6.1.11",
-    "@fullcalendar/interaction": "^6.1.11",
-    "@fullcalendar/react": "^6.1.11",
-    "@headlessui/react": "^1.7.19",
-    "@headlessui/tailwindcss": "^0.2.0",
-    "@iconify/react": "^4.1.1",
-    "@lordicon/react": "^1.6.0",
-    "@mui/icons-material": "^5.15.15",
-    "@mui/lab": "^5.0.0-alpha.147",
-    "@mui/material": "^5.15.14",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "@mui/x-charts": "^7.3.0",
-    "@mui/x-date-pickers": "^7.0.0",
-    "@remixicon/react": "^4.2.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@toast-ui/react-calendar": "^2.1.3",
-    "@tremor/react": "^3.16.0",
-    "@types/styled-components": "^5.1.34",
-    "apexcharts": "^3.43.0",
-    "autoprefixer": "^10.4.19",
-    "axios": "^1.6.7",
-    "bootstrap": "^5.3.2",
-    "chroma-js": "^2.4.2",
-    "cors": "^2.8.5",
-    "date-fns": "^2.30.0",
-    "dayjs": "^1.11.10",
-    "devextreme": "^23.2.4",
-    "devextreme-react": "23.2.4",
-    "framer-motion": "^11.1.9",
-    "history": "^5.3.0",
-    "https-localhost": "^4.7.1",
-    "js-dynamic-island": "^2.1.6",
-    "jwt-decode": "^4.0.0",
-    "lodash": "^4.17.21",
-    "lord-icon-element": "^4.1.2",
-    "lottie-web": "^5.12.2",
-    "moment": "^2.30.1",
-    "numeral": "^2.0.6",
-    "postcss-cli": "^11.0.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-apexcharts": "^1.4.1",
-    "react-big-calendar": "^1.11.0",
-    "react-bootstrap": "^2.10.0",
-    "react-calendar": "^4.8.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-datepicker": "^6.6.0",
-    "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0",
-    "react-hook-form": "^7.47.0",
-    "react-icons": "^5.2.1",
-    "react-live-island": "^0.10.0",
-    "react-router-dom": "^6.11.1",
-    "react-scripts": "5.0.1",
-    "react-search-box": "^3.0.0",
-    "react-select": "^5.8.0",
-    "react-swipe-to-reveal-actions": "^1.1.1",
-    "react-toastify": "^10.0.5",
-    "rsuite": "^5.59.2",
-    "simplebar-react": "^3.2.4",
-    "styled-components": "^6.1.8",
-    "stylis-plugin-rtl": "^2.1.1",
-    "tailwindcss": "^3.4.3",
-    "tui-calendar": "^1.15.3",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
-    "devextreme-themebuilder": "23.2.4"
-  }
+    "name": "dr.volte",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.0",
+        "@faker-js/faker": "^8.1.0",
+        "@fortawesome/fontawesome-svg-core": "^6.5.1",
+        "@fortawesome/free-solid-svg-icons": "^6.5.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@fullcalendar/core": "^6.1.11",
+        "@fullcalendar/daygrid": "^6.1.11",
+        "@fullcalendar/interaction": "^6.1.11",
+        "@fullcalendar/react": "^6.1.11",
+        "@headlessui/react": "^1.7.19",
+        "@headlessui/tailwindcss": "^0.2.0",
+        "@iconify/react": "^4.1.1",
+        "@lordicon/react": "^1.6.0",
+        "@mui/icons-material": "^5.15.15",
+        "@mui/lab": "^5.0.0-alpha.147",
+        "@mui/material": "^5.15.14",
+        "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+        "@mui/x-charts": "^7.3.0",
+        "@mui/x-date-pickers": "^7.0.0",
+        "@remixicon/react": "^4.2.0",
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@toast-ui/react-calendar": "^2.1.3",
+        "@tremor/react": "^3.16.0",
+        "@types/styled-components": "^5.1.34",
+        "apexcharts": "^3.43.0",
+        "autoprefixer": "^10.4.19",
+        "axios": "^1.6.7",
+        "bootstrap": "^5.3.2",
+        "chroma-js": "^2.4.2",
+        "cors": "^2.8.5",
+        "date-fns": "^2.30.0",
+        "dayjs": "^1.11.10",
+        "devextreme": "^23.2.4",
+        "devextreme-react": "23.2.4",
+        "framer-motion": "^11.1.9",
+        "history": "^5.3.0",
+        "https-localhost": "^4.7.1",
+        "js-dynamic-island": "^2.1.6",
+        "jwt-decode": "^4.0.0",
+        "lodash": "^4.17.21",
+        "lord-icon-element": "^4.1.2",
+        "lottie-web": "^5.12.2",
+        "moment": "^2.30.1",
+        "numeral": "^2.0.6",
+        "postcss-cli": "^11.0.0",
+        "prop-types": "^15.8.1",
+        "react": "^18.2.0",
+        "react-apexcharts": "^1.4.1",
+        "react-big-calendar": "^1.11.0",
+        "react-bootstrap": "^2.10.0",
+        "react-calendar": "^4.8.0",
+        "react-chartjs-2": "^5.2.0",
+        "react-datepicker": "^6.6.0",
+        "react-dom": "^18.2.0",
+        "react-helmet-async": "^1.3.0",
+        "react-hook-form": "^7.47.0",
+        "react-icons": "^5.2.1",
+        "react-live-island": "^0.10.0",
+        "react-router-dom": "^6.11.1",
+        "react-scripts": "5.0.1",
+        "react-search-box": "^3.0.0",
+        "react-select": "^5.8.0",
+        "react-swipe-to-reveal-actions": "^1.1.1",
+        "react-toastify": "^10.0.5",
+        "rsuite": "^5.59.2",
+        "simplebar-react": "^3.2.4",
+        "styled-components": "^6.1.8",
+        "stylis-plugin-rtl": "^2.1.1",
+        "tailwindcss": "^3.4.3",
+        "tui-calendar": "^1.15.3",
+        "web-vitals": "^1.1.2"
+    },
+    "scripts": {
+        "start": "set HTTPS=true&&react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@tailwindcss/forms": "^0.5.7",
+        "devextreme-themebuilder": "23.2.4"
+    }
 }
