new_patient put api and some updates

--- a/Spring_Server/src/main/resources/application.properties
+++ b/Spring_Server/src/main/resources/application.properties
@@ -12,6 +12,7 @@ server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
 #logging.level.root=warn
 spring.data.rest.base-path=springdatarest
+spring.data.rest.default-page-size=100
 # Application properties for Java Mail Sender
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
